hostname/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname
spec:
  selector:
    app: hostname
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
